--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "vite build --base=https://PrashantChauhan001.github.io/ProManage",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
