Changes into package json and vite config file to deploy project correctly

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://PrashantChauhan001.github.io/ProManage",
+  "homepage": "https://PrashantChauhan001.github.io/ProManage/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "vite build --base=https://PrashantChauhan001.github.io/ProManage",
+    "predeploy": "vite build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
