Changed base url and added prefix init
- made necessary changes to update the code as per the base url prefix
- made changes into package json and config accordingly

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://PrashantChauhan001.github.io/ProManage/",
+  "homepage": "https://prashantchauhan001.github.io/pro-manage/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
